KAA renamal to KKA.

--- a/EW/rails/adjustableRailCustom.cfg
+++ b/EW/rails/adjustableRailCustom.cfg
@@ -3,7 +3,7 @@ PART {
 	name = bahaAdjustableRailx1
 	module = Part
 	author = Toonu
-	//Model and config by BahamutoD, edited by KAA Team.
+	//Model and config by BahamutoD, edited by KKA Team.
 
 	// --- asset parameters ---
 	mesh = model.mu
@@ -50,7 +50,7 @@ PART {
 	name = bahaAdjustableRailx2
 	module = Part
 	author = Toonu
-	//Model and config by BahamutoD, edited by KAA Team.
+	//Model and config by BahamutoD, edited by KKA Team.
 
 	// --- asset parameters ---
 	mesh = model.mu
