--- a/Missiles/aam_AIM9.cfg
+++ b/Missiles/aam_AIM9.cfg
@@ -8,7 +8,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_AIM9B
+		model = KKA/Missiles/aam_AIM9B
 	}
 	NODE {
 		name = missileNode
@@ -133,7 +133,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_AIM9D
+		model = KKA/Missiles/aam_AIM9D
 	}
 	NODE {
 		name = missileNode
@@ -258,7 +258,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_AIM9L
+		model = KKA/Missiles/aam_AIM9L
 	}
 	NODE {
 		name = missileNode
@@ -384,7 +384,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_AIM9L
+		model = KKA/Missiles/aam_AIM9L
 	}
 	NODE {
 		name = missileNode
@@ -510,7 +510,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_AIM9P
+		model = KKA/Missiles/aam_AIM9P
 	}
 	NODE {
 		name = missileNode
