--- a/Missiles/aam_R23R.cfg
+++ b/Missiles/aam_R23R.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 	
 	MODEL {
-		model = KAA/Missiles/aam_R23R
+		model = KKA/Missiles/aam_R23R
 	}
 	NODE {
 		name = missileNode
