--- a/Missiles/aam_R3.cfg
+++ b/Missiles/aam_R3.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_R3
+		model = KKA/Missiles/aam_R3
 	}
 	NODE {
 		name = missileNode
@@ -127,7 +127,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_R3
+		model = KKA/Missiles/aam_R3
 	}
 	NODE {
 		name = missileNode
