--- a/Missiles/aam_R511.cfg
+++ b/Missiles/aam_R511.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_R511
+		model = KKA/Missiles/aam_R511
 	}
 	NODE {
 		name = missileNode
