--- a/Missiles/aam_R98.cfg
+++ b/Missiles/aam_R98.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_R98R
+		model = KKA/Missiles/aam_R98R
 	}		
 	NODE {
 		name = missileNode
@@ -127,7 +127,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_R98T
+		model = KKA/Missiles/aam_R98T
 	}	
 	NODE {
 		name = missileNode
@@ -255,7 +255,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_R98MR
+		model = KKA/Missiles/aam_R98MR
 	}
 	NODE {
 		name = missileNode
@@ -372,7 +372,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_R98MT
+		model = KKA/Missiles/aam_R98MT
 	}
 	NODE {
 		name = missileNode
