--- a/Missiles/aam_RedTop.cfg
+++ b/Missiles/aam_RedTop.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_RedTop	
+		model = KKA/Missiles/aam_RedTop	
 	}
 	NODE {
 		name = missileNode
