--- a/Missiles/agm_AGM28.cfg
+++ b/Missiles/agm_AGM28.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/agm_AGM28
+		model = KKA/Missiles/agm_AGM28
 	}
 	NODE {
 		name = missileNode
@@ -102,8 +102,8 @@
 		boosterDecoupleSpeed = 2
 		boostTransformName = boostTransform
 		boostExhaustTransformName = boostTransform
-		boostExhaustPrefabPath = KAA/Exhaust/ExhaustSmallBlue
-		exhaustPrefabPath = KAA/Exhaust/ExhaustSmallBlue
+		boostExhaustPrefabPath = KKA/Exhaust/ExhaustSmallBlue
+		exhaustPrefabPath = KKA/Exhaust/ExhaustSmallBlue
 		audioClipPath = BDArmory/Sounds/jet
 
 		// --- Engagement Rules --- 
