--- a/Missiles/agm_KSR2.cfg
+++ b/Missiles/agm_KSR2.cfg
@@ -11,7 +11,7 @@
 	
 	// --- asset parameters ---
 	MODEL {
-		model = KAA/Missiles/agm_KSR2
+		model = KKA/Missiles/agm_KSR2
 	}
 	NODE {
 		name = missileNode
