--- a/Missiles/agm_Kh22.cfg
+++ b/Missiles/agm_Kh22.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/agm_Kh22
+		model = KKA/Missiles/agm_Kh22
 	}
 	NODE {
 		name = missileNode
