--- a/Missiles/sam_3M9.cfg
+++ b/Missiles/sam_3M9.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/sam_3M9
+		model = KKA/Missiles/sam_3M9
 	}
 	NODE {
 		name = missileNode
