--- a/Missiles/sam_CIM10.cfg
+++ b/Missiles/sam_CIM10.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/sam_CIM10
+		model = KKA/Missiles/sam_CIM10
 	}
 	NODE {
 		name = missileNode
