--- a/Missiles/sam_GWS20.cfg
+++ b/Missiles/sam_GWS20.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/sam_GWS20
+		model = KKA/Missiles/sam_GWS20
 	}
 	NODE {
 		name = missileNode
