--- a/Missiles/sam_MIM72.cfg
+++ b/Missiles/sam_MIM72.cfg
@@ -8,7 +8,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/sam_MIM72
+		model = KKA/Missiles/sam_MIM72
 	}
 	NODE {
 		name = missileNode
