--- a/Missiles/sam_RIM24.cfg
+++ b/Missiles/sam_RIM24.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/sam_RIM24
+		model = KKA/Missiles/sam_RIM24
 	}
 	NODE {
 		name = missileNode
