--- a/Missiles/sam_S200.cfg
+++ b/Missiles/sam_S200.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/sam_5V21
+		model = KKA/Missiles/sam_5V21
 	}
 	NODE {
 		name = missileNode
