--- a/Missiles/sam_S25.cfg
+++ b/Missiles/sam_S25.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/sam_S25
+		model = KKA/Missiles/sam_S25
 	}
 	NODE {
 		name = missileNode
