--- a/Turrets/tank_AMX30.cfg
+++ b/Turrets/tank_AMX30.cfg
@@ -12,7 +12,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Turrets/tank_AMX30
+		model = KKA/Turrets/tank_AMX30
 	}
 
 	// --- editor parameters ---
@@ -103,11 +103,11 @@ PART {
 		heatPerShot = 60
 		heatLoss = 740
 
-		fireSoundPath = KAA/Sounds/105mm
+		fireSoundPath = KKA/Sounds/105mm
 		overheatSoundPath = BDArmory/Parts/50CalTurret/sounds/turretOverheat
 		oneShotSound = true
 		showReloadMeter = true
-		reloadCompletePath = KAA/Sounds/ReadytofireBritish
+		reloadCompletePath = KKA/Sounds/ReadytofireBritish
 		reloadAudioPath = BDArmory/Parts/m1Abrams/sounds/reload
 	}
 	RESOURCE {
