--- a/Turrets/tank_T-62.cfg
+++ b/Turrets/tank_T-62.cfg
@@ -11,7 +11,7 @@ PART {
 	// --- asset parameters ---
 	rescaleFactor = 1
 	MODEL {
-		model = KAA/Turrets/tank_T-62
+		model = KKA/Turrets/tank_T-62
 	}
 
 	// --- editor parameters ---
@@ -101,11 +101,11 @@ PART {
 		heatPerShot = 60
 		heatLoss = 740
 
-		fireSoundPath = KAA/Sounds/115mm
+		fireSoundPath = KKA/Sounds/115mm
 		overheatSoundPath = BDArmory/Parts/50CalTurret/sounds/turretOverheat
 		oneShotSound = true
 		showReloadMeter = true
-		reloadCompletePath = KAA/Sounds/ReadytofireRussian
+		reloadCompletePath = KKA/Sounds/ReadytofireRussian
 		reloadAudioPath = BDArmory/Parts/m1Abrams/sounds/reload
 	}
 	RESOURCE {
