--- a/Missiles/aam_AIM4A.cfg
+++ b/Missiles/aam_AIM4A.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_AIM4A
+		model = KKA/Missiles/aam_AIM4A
 	}
 	NODE {
 		name = missileNode
