--- a/Missiles/aam_AIM7E.cfg
+++ b/Missiles/aam_AIM7E.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/aam_AIM7E
+		model = KKA/Missiles/aam_AIM7E
 	}
 	NODE {
 		name = missileNode
