--- a/Missiles/agm_AGM12C.cfg
+++ b/Missiles/agm_AGM12C.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/agm_AGM12C
+		model = KKA/Missiles/agm_AGM12C
 	}
 	NODE {
 		name = missileNode
