--- a/Missiles/agm_AGM45.cfg
+++ b/Missiles/agm_AGM45.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/agm_AGM45
+		model = KKA/Missiles/agm_AGM45
 	}
 	NODE {
 		name = missileNode
