--- a/Missiles/agm_AUMN2.cfg
+++ b/Missiles/agm_AUMN2.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/agm_AUMN2
+		model = KKA/Missiles/agm_AUMN2
 	}
 	NODE {
 		name = missileNode
