--- a/Missiles/agm_KS1.cfg
+++ b/Missiles/agm_KS1.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/agm_KS1
+		model = KKA/Missiles/agm_KS1
 	}		
 	NODE {
 		name = missileNode
