--- a/Missiles/sam_9K32.cfg
+++ b/Missiles/sam_9K32.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/sam_9K32
+		model = KKA/Missiles/sam_9K32
 	}		
 	NODE {
 		name = missileNode
