--- a/Missiles/sam_9M317.cfg
+++ b/Missiles/sam_9M317.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/sam_9M317
+		model = KKA/Missiles/sam_9M317
 	}
 	NODE {
 		name = missileNode
