--- a/Missiles/sam_9M8.cfg
+++ b/Missiles/sam_9M8.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/sam_9M8
+		model = KKA/Missiles/sam_9M8
 	}
 	NODE {
 		name = missileNode
