--- a/Missiles/sam_FIM43.cfg
+++ b/Missiles/sam_FIM43.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/sam_FIM43
+		model = KKA/Missiles/sam_FIM43
 	}		
 	NODE {
 		name = missileNode
