--- a/Missiles/ssm_SS11.cfg
+++ b/Missiles/ssm_SS11.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KAA/Missiles/ssm_SS11
+		model = KKA/Missiles/ssm_SS11
 	}
 	NODE {
 		name = missileNode
