--- a/Turrets/tank_M41.cfg
+++ b/Turrets/tank_M41.cfg
@@ -11,7 +11,7 @@ PART {
 	// --- asset parameters ---
 	rescaleFactor = 1
 	MODEL {
-		model = KAA/Turrets/tank_M41
+		model = KKA/Turrets/tank_M41
 	}
 
 	// --- editor parameters ---
@@ -101,11 +101,11 @@ PART {
 		heatPerShot = 60
 		heatLoss = 740
 
-		fireSoundPath = KAA/Sounds/76mm
+		fireSoundPath = KKA/Sounds/76mm
 		overheatSoundPath = BDArmory/Parts/50CalTurret/sounds/turretOverheat
 		oneShotSound = true
 		showReloadMeter = true
-		reloadCompletePath = KAA/Sounds/ReadytofireAmerican
+		reloadCompletePath = KKA/Sounds/ReadytofireAmerican
 		reloadAudioPath = BDArmory/Parts/m1Abrams/sounds/reload
 	}
 
