--- a/Turrets/tank_M60A1.cfg
+++ b/Turrets/tank_M60A1.cfg
@@ -11,7 +11,7 @@ PART {
 	// --- asset parameters ---
 	rescaleFactor = 1
 	MODEL {
-		model = KAA/Turrets/tank_M60A1
+		model = KKA/Turrets/tank_M60A1
 	}
 
 	// --- editor parameters ---
@@ -101,11 +101,11 @@ PART {
 		heatPerShot = 60
 		heatLoss = 740
 
-		fireSoundPath = KAA/Sounds/105mm
+		fireSoundPath = KKA/Sounds/105mm
 		overheatSoundPath = BDArmory/Parts/50CalTurret/sounds/turretOverheat
 		oneShotSound = true
 		showReloadMeter = true
-		reloadCompletePath = KAA/Sounds/ReadytofireBritish
+		reloadCompletePath = KKA/Sounds/ReadytofireBritish
 		reloadAudioPath = BDArmory/Parts/m1Abrams/sounds/reload
 	}
 	RESOURCE {
