--- a/EW/MM_JammRadars.cfg
+++ b/EW/MM_JammRadars.cfg
@@ -22,6 +22,27 @@
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
 }
+@PART[Type-57-Cockpit]:NEEDS[NMB] {
+	-MODULE[ModuleECMJammer] {}
+	-MODULE[ModuleRadar] {}
+}
+
+@PART[Vipercockpit]:NEEDS[NMB] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[SuperFlanker]:NEEDS[NMB] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[SU30cockpit]:NEEDS[NMB] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[FA-18C]:NEEDS[NMB] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[NMB-F14D]:NEEDS[NMB] {
+	-MODULE[ModuleRadar] {}
+}
+
 @PART[3XR]:NEEDS[MNWS_WEAPON] {
 	-MODULE[ModuleECMJammer] {}
 }
