Addition of stealth modules.

--- a/EW/Categories.cfg
+++ b/EW/Categories.cfg
@@ -26,7 +26,7 @@ SUBCATEGORY {
     FILTER {
 		CHECK {
 			type = name
-			value = 3XR, jamm_sps141, jamm_spectra, jamm_l175v, jamm_ari23246, jamm_sps161, jamm_smalta5, jamm_ngj, jamm_alq218, jamm_apq181, jamm_alq135, jamm_alq99, jamm_alt34, jamm_alt28
+			value = 3XR, jamm_sps141, jamm_spectra, jamm_l175v, jamm_ari23246, jamm_sps161, jamm_smalta5, jamm_ngj, jamm_alq218, jamm_apq181, jamm_alq135, jamm_alq99, jamm_alt34, jamm_alt28, jamm_stealth1, jamm_stealth2, PSSM
 		}
     }	
 }
