--- a/EW/Jammers.cfg
+++ b/EW/Jammers.cfg
@@ -15,10 +15,8 @@
 	MODULE {
 		name = ModuleECMJammer
 		alwaysOn = false
-		gimbalLimit = 90
-		zoomFOVs = 120, 40, 1, 0.1
 		resourceDrain = 1
-
+		
 		jammerStrength = 2000
 		lockBreaker = true
 		lockBreakerStrength = 100
@@ -41,8 +39,6 @@
 	MODULE {
 		name = ModuleECMJammer
 		alwaysOn = false
-		gimbalLimit = 90
-		zoomFOVs = 120, 40, 1, 0.1
 		resourceDrain = 3
 		
 		jammerStrength = 2000
@@ -67,8 +63,6 @@
 	MODULE {
 		name = ModuleECMJammer
 		alwaysOn = false
-		gimbalLimit = 90
-		zoomFOVs = 120, 40, 1, 0.1
 		resourceDrain = 2
 
 		jammerStrength = 800
@@ -93,8 +87,6 @@
 	MODULE {
 		name = ModuleECMJammer
 		alwaysOn = false
-		gimbalLimit = 90
-		zoomFOVs = 120, 40, 1, 0.1
 		resourceDrain = 3
 
 		jammerStrength = 700
@@ -119,8 +111,6 @@
 	MODULE {
 		name = ModuleECMJammer
 		alwaysOn = false
-		gimbalLimit = 90
-		zoomFOVs = 120, 40, 1, 0.1
 		resourceDrain = 4
 
 		jammerStrength = 200
@@ -145,8 +135,6 @@
 	MODULE {
 		name = ModuleECMJammer
 		alwaysOn = false
-		gimbalLimit = 90
-		zoomFOVs = 120, 40, 1, 0.1
 		resourceDrain = 3
 
 		jammerStrength = 700
@@ -171,8 +159,6 @@
 	MODULE {
 		name = ModuleECMJammer
 		alwaysOn = false
-		gimbalLimit = 90
-		zoomFOVs = 120, 40, 1, 0.1
 		resourceDrain = 3
 
 		jammerStrength = 300
@@ -199,8 +185,6 @@
 	MODULE {
 		name = ModuleECMJammer
 		alwaysOn = false
-		gimbalLimit = 90
-		zoomFOVs = 120, 40, 1, 0.1
 		resourceDrain = 0.5
 
 		jammerStrength = 500
@@ -250,8 +234,6 @@
 	MODULE {
 		name = ModuleECMJammer
 		alwaysOn = false
-		gimbalLimit = 90
-		zoomFOVs = 120, 40, 1, 0.1
 		resourceDrain = 1.9
 
 		jammerStrength = 700
@@ -276,8 +258,6 @@
 	MODULE {
 		name = ModuleECMJammer
 		alwaysOn = false
-		gimbalLimit = 90
-		zoomFOVs = 120, 40, 1, 0.1
 		resourceDrain = 3.5
 
 		jammerStrength = 700
@@ -302,8 +282,6 @@
 	MODULE {
 		name = ModuleECMJammer
 		alwaysOn = false
-		gimbalLimit = 90
-		zoomFOVs = 120, 40, 1, 0.1
 		resourceDrain = 3
 
 		jammerStrength = 600
@@ -328,8 +306,6 @@
 	MODULE {
 		name = ModuleECMJammer
 		alwaysOn = false
-		gimbalLimit = 90
-		zoomFOVs = 120, 40, 1, 0.1
 		resourceDrain = 3
 
 		jammerStrength = 1000
@@ -338,5 +314,56 @@
 		
 		rcsReduction = false
 		rcsReductionFactor = 0
+	}
+}
+
+//Stealth
++PART[sensorGravimeter]:FINAL {
+	%name = jamm_stealth1
+	%title = 1st-generation Stealth Coating Module
+	%rescaleFactor = 1
+	%author = Toonu
+	@manufacturer = Kerbal Kombat Anthology
+	@description = Place this anywhere on your aircraft to apply a 2nd generation stealth coating to it.
+	bdacategory = Countermeasures
+	!MODULE[ModuleEnviroSensor] {}
+	!MODULE[ModuleScienceExperiment] {}
+
+	MODULE {
+		name = ModuleECMJammer
+		alwaysOn = true
+		resourceDrain = 0
+
+		jammerStrength = 0
+		lockBreaker = false
+		lockBreakerStrength = 0
+		
+		rcsReduction = true
+		rcsReductionFactor = 0.15
+	}
+}
+
++PART[sensorGravimeter]:FINAL {
+	%name = jamm_stealth2
+	%title = 2nd-generation Stealth Coating Module
+	%rescaleFactor = 1
+	%author = Toonu
+	@manufacturer = Kerbal Kombat Anthology
+	@description = Place this anywhere on your aircraft to apply a 2nd generation stealth coating to it.
+	bdacategory = Countermeasures
+	!MODULE[ModuleEnviroSensor] {}
+	!MODULE[ModuleScienceExperiment] {}
+
+	MODULE {
+		name = ModuleECMJammer
+		alwaysOn = true
+		resourceDrain = 0
+
+		jammerStrength = 0
+		lockBreaker = false
+		lockBreakerStrength = 0
+		
+		rcsReduction = true
+		rcsReductionFactor = 0.55
 	}
 }
