--- a/EW/MM_JammRadars.cfg
+++ b/EW/MM_JammRadars.cfg
@@ -47,6 +47,7 @@
 	-MODULE[ModuleECMJammer] {}
 }
 @PART[PSSM]:NEEDS[KerbalField] {
+	@title = 3rd-generation Stealth System Module
 	@MODULE[ModuleECMJammer] {		
 		@resourceDrain = 8
 		@jammerStrength = 100	
