--- a/EW/MM_JammRadars.cfg
+++ b/EW/MM_JammRadars.cfg
@@ -26,7 +26,6 @@
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
 }
-
 @PART[Vipercockpit]:NEEDS[NMB] {
 	-MODULE[ModuleRadar] {}
 }
@@ -46,6 +45,10 @@
 @PART[3XR]:NEEDS[MNWS_WEAPON] {
 	-MODULE[ModuleECMJammer] {}
 }
+
+@PART[99A2Structural]:NEEDS[KerbalField] {
+	-MODULE[ModuleRadar] {}
+}
 @PART[PSSM]:NEEDS[KerbalField] {
 	@title = 3rd-generation Stealth System Module
 	@MODULE[ModuleECMJammer] {		
@@ -57,5 +60,73 @@
 	}
 }
 
+@PART[Strids74]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[T-10]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[T-44]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[T-54]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[T-64]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[T-90]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[T26E4]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[AbramsA2]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[AMT34]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[Amx50B]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[AmxELCbis]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[BatChat25]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[BMP3HE]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[FV4005]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[HSTVAP]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[IS2]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[IS7]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[Leopard1]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[Leopard2A5]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[M103]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[M3Bradly]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[Obj906]:NEEDS[FoxDefenseContracts] {
+	-MODULE[ModuleRadar] {}
+}
 
-
+@PART[Humvee]:NEEDS[SM_AFVs] {
+	-MODULE[ModuleRadar] {}
+}
