Balance batch: 60s radars balance

--- a/EW/Edits.cfg
+++ b/EW/Edits.cfg
@@ -50,17 +50,13 @@
 		@ignitionThreshold = 0.01
 		@maxThrust = 160
 
-		@velCurve {
-			@key,0 = 0 4 0 0
-			@key,1 = 0.1040347 0.8288766 -2.117988 -2.117988
-			@key,2 = 0.131739 0 0 0
-			!key,3
-			!key,4
-			!key,5
-			!key,6
-			!key,7
-			!key,8
-		} 
+		-velCurve {}
+
+		velCurve {
+			key = 0 4 0 0
+			key = 0.08157372 0.8517647 -2.117988 -2.117988
+			key = 0.131739 0 0 0
+		}
 	}
 }
 +PART[LBPmd2]:AFTER[LShipPartsRequired] {
@@ -69,17 +65,12 @@
 	@MODULE[ModuleEngines] {
 		@ignitionThreshold = 0.01
 		@maxThrust = 160
+		-velCurve {}
 
-		@velCurve {
-			@key,0 = 0 4 0 0
-			@key,1 = 0.08157372 0.8517647 -2.117988 -2.117988
-			@key,2 = 0.131739 0 0 0
-			!key,3
-			!key,4
-			!key,5
-			!key,6
-			!key,7
-			!key,8
+		velCurve {
+			key = 0 4 0 0
+			key = 0.08157372 0.8517647 -2.117988 -2.117988
+			key = 0.131739 0 0 0
 		}
 	}
 }
@@ -90,17 +81,13 @@
 		@ignitionThreshold = 0.01
 		@maxThrust = 300
 
-		@velCurve {
-			@key,0 = 0 4 0 0
-			@key,1 = 0.0752871 0.9815255 -2.117988 -2.117988
-			@key,2 = 0.131739 0 0 0
-			!key,3
-			!key,4
-			!key,5
-			!key,6
-			!key,7
-			!key,8
-		} 
+		-velCurve {}
+
+		velCurve {
+			key = 0 4 0 0
+			key = 0.08157372 0.8517647 -2.117988 -2.117988
+			key = 0.131739 0 0 0
+		}
 	}
 }
 +PART[LBPmd2]:AFTER[LShipPartsRequired] {
@@ -110,17 +97,13 @@
 		@ignitionThreshold = 0.01
 		@maxThrust = 500
 
-		@velCurve {
-			@key,0 = 0 4 0 0
-			@key,1 = 0.06167626 0.7677804 -2.117988 -2.117988
-			@key,2 = 0.131739 0 0 0
-			!key,3
-			!key,4
-			!key,5
-			!key,6
-			!key,7
-			!key,8
-		} 
+		-velCurve {}
+
+		velCurve {
+			key = 0 4 0 0
+			key = 0.08157372 0.8517647 -2.117988 -2.117988
+			key = 0.131739 0 0 0
+		}
 	}
 }
 @PART[LBPmd2]:AFTER[LShipPartsRequired]{
@@ -128,16 +111,12 @@
 	@MODULE[ModuleEngines] {
 		@ignitionThreshold = 0.01
 
-		@velCurve {
-			@key,0 = 0 4 0 0
-			@key,1 = 0.0556643 0.7448922 -2.117988 -2.117988
-			@key,2 = 0.131739 0 0 0
-			!key,3
-			!key,4
-			!key,5
-			!key,6
-			!key,7
-			!key,8
-		} 
+		-velCurve {}
+
+		velCurve {
+			key = 0 4 0 0
+			key = 0.08157372 0.8517647 -2.117988 -2.117988
+			key = 0.131739 0 0 0
+		}
 	}
 }
