--- a/EW/MM_JammRadars.cfg
+++ b/EW/MM_JammRadars.cfg
@@ -1,3 +1,64 @@
+//Radars balance
+
+@PART[Elden40]:NEEDS[FoxDefenseContracts] {
+    @MODULE[ModuleRadar] {
+		@directionalFieldOfView = 10
+		@scanRotationSpeed = 60
+		-radarDetectionCurve {}
+		-radarLockTrackCurve {}
+		
+	    radarDetectionCurve {
+            key = 0 0 0 0
+            key = 7 10 0 2.97274
+            key = 12 30 6.784729 6.108558
+        } 
+	
+	 	radarLockTrackCurve {
+            key = 0 0 0 1.854549
+            key = 5 10 3.269439 4.984671
+            key = 6 20 5.648911 5.854553          
+        } 
+    }
+}
+@PART[M163VADS]:NEEDS[SM_AFVs] {
+    @MODULE[ModuleRadar] {
+		@directionalFieldOfView = 35
+		@scanRotationSpeed = 40
+		@canScan = false
+		-radarDetectionCurve {}
+		-radarLockTrackCurve {}
+	
+	 	radarLockTrackCurve {
+            key = 0 0 0 1.191601
+            key = 4 10 6.903669 6.989554
+            key = 5 20 10.53343 11.25173
+        } 
+    }
+}
+@PART[ShilkaZSU234turret]:NEEDS[SM_AFVs] {
+    @MODULE[ModuleRadar] {
+		@directionalFieldOfView = 60
+		@scanRotationSpeed = 20
+		-radarDetectionCurve {}
+		-radarLockTrackCurve {}
+		
+	    radarDetectionCurve {
+            key = 0 0 0 1.191601
+            key = 9 10 1.51575 1.561383
+            key = 16 20 1.525667 2.503766
+        } 
+	
+	 	radarLockTrackCurve {
+            key = 0 0 0 2.961521
+            key = 3 10 4.145666 4.73561
+            key = 5 20 4.423522 2.503766
+        } 
+    }
+}
+
+
+//Radars and jammers removal
+
 @PART[J10C]:NEEDS[NMB] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
