--- a/EW/Jammers.cfg
+++ b/EW/Jammers.cfg
@@ -324,7 +324,7 @@
 	%rescaleFactor = 1
 	%author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
-	@description = Place this anywhere on your aircraft to apply a 2nd generation stealth coating to it.
+	@description = Place this anywhere on your aircraft to apply a 1nd generation stealth coating boost to it. Main feature of 1st generation stealth is the shape of the plane itself nonetheless.
 	bdacategory = Countermeasures
 	!MODULE[ModuleEnviroSensor] {}
 	!MODULE[ModuleScienceExperiment] {}
