Balance batch: 60' Radar descriptions, Bullet penetration rebalance.

--- a/EW/MM_JammRadars.cfg
+++ b/EW/MM_JammRadars.cfg
@@ -36,7 +36,10 @@
     }
 }
 @PART[ShilkaZSU234turret]:NEEDS[SM_AFVs] {
+	@title = ZSU-23-4 Shilka
+	@description = ZSU-23-4 "Shilka" four 23 mm autocannons, radar guided Anti-aircraft gun, also effective at destroying light ground targets and parts of larger vehicles. It uses 1RL33 (RPK-2 "Tobol") Radar.
     @MODULE[ModuleRadar] {
+		@radarName = 1RL33 (RPK-2 "Tobol") Radar
 		@directionalFieldOfView = 60
 		@scanRotationSpeed = 20
 		-radarDetectionCurve {}
