Balance batch: Bullet explosive masses and Fuzes

--- a/EW/MM_Weapons.cfg
+++ b/EW/MM_Weapons.cfg
@@ -72,3 +72,9 @@
 		@bulletType = 30x173Bullet; 30x173HEBullet
 	}
 }
+@PART[BMP75mmTurret] {
+	@MODULE[ModuleWeapon] {
+		%shortName = BMP 3 75mm
+		@bulletType = 76.2MMMHEATFS
+	}
+}
