--- a/EW/MM_Bullets.cfg
+++ b/EW/MM_Bullets.cfg
@@ -6,15 +6,18 @@
 }
 @BULLET[27×145HEBullet] {
 	@apBulletMod = 1
+    @tntMass = 0.032
 }
 @BULLET[30MM-Intelligent] {
 	@bulletVelocity = 1100
 	@bulletMass = 0.4
 	@apBulletMod = 1.5
+    @tntMass = 0.03
 }
 @BULLET[30x165HE] {
 	@bulletMass = 0.4
 	@apBulletMod = 0.42
+    @tntMass = 0.031
 }
 @BULLET[30x165K] {
 	@bulletVelocity = 900
@@ -31,6 +34,8 @@
 	@bulletMass = 0.32
 	@apBulletMod = 1
 	@fuzeType = Flak
+    @tntMass = 0.06
+    @fuzeType = None 
 }
 @BULLET[152MM-APFSDS] {
 	@caliber = 50
@@ -45,6 +50,8 @@
 	@bulletVelocity = 980
 	@bulletMass = 5.9
 	@apBulletMod = 1.2
+	@tntMass = 0.42
+    @fuzeType = Timed
 }
 @BULLET[76MMRail] {
 	@bulletVelocity = 3200
@@ -54,27 +61,100 @@
 @BULLET[100mmAPHE] {
 	@bulletVelocity = 870
 	@apBulletMod = 1.3
+	@tntMass = 1.13
+    @explosive = True
 }
-@BULLET[OF58100mmBullet] {
+@BULLET[QF58100mmBullet] {
 	@bulletVelocity = 900
 	@bulletMass = 15.6
 	@apBulletMod = 0.5
+    @tntMass = 10.3
+    @fuzeType = Flak
+}
++BULLET[OF58100mmBullet]:NEEDS[NAS]:FINAL {
+	@name = 100MMZS-58
+    @fuzeType = Timed
 }
 @BULLET[120mmBulletHE] {
 	@apBulletMod = 0.25
+    @tntMass = 2.5
 }
 @BULLET[122mmHE] {
 	@apBulletMod = 0.2
+    @tntMass = 9
 }
 @BULLET[130mmAPHE] {
 	@bulletMass = 32
 	@apBulletMod = 0.4
+    @fuzeType = Flak
 }
 @BULLET[F44130Bullet] {
 	@bulletMass = 34
 	@apBulletMod = 0.4
+    @tntMass = 13.0
+    @fuzeType = Flak
 }
 @BULLET[155mmHE] {
 	@bulletMass = 60
 	@apBulletMod = 0.15
+    @tntMass = 12
 }
+@BULLET[12.7mmBullet] {
+	@explosive = False
+	@tntMass = 0
+}
+@BULLET[12.7mmHEBullet] {
+	@tntMass = 0.0014
+}
+@BULLET[20x102mmHEBullet] {
+	@tntMass = 0.01
+}
+@BULLET[23x115mmBullet] {
+	@tntMass = 0.011
+}
+@BULLET[25x115mmBullet] {
+	@tntMass = 0.015
+}
+@BULLET[25x137mmBullet] {
+	@tntMass = 0.017
+}
+@BULLET[M792HEI] {
+	@tntMass = 0.025
+}
+@BULLET[30mmBullet] {
+	@tntMass = 0.026
+}
+@BULLET[30x173HEBullet] {
+	@tntMass = 0.042
+}
+@BULLET[35x228HEBullet] {
+	@tntMass = 0.07
+}
+@BULLET[40mmLuft42HE] {
+	@tntMass = 0.25
+    @fuzeType = None 
+}
+@BULLET[40x53HEBullet] {
+	@tntMass = 0.15
+}
+@BULLET[76x636mmBullet] {
+	@tntMass = 3
+    @fuzeType = Flak
+}
+@BULLET[122MMAPHE] {
+    @explosive = True
+	@tntMass = 0.5
+}
+@BULLET[122MMAPHEBC] {
+    @explosive = True
+	@tntMass = 0.5
+}
+@BULLET[152ObjAPHEBC] {
+	@tntMass = 1.0
+    @explosive = True
+}
+@BULLET[100MMHE] {
+	@explosive = True
+}
+
+
