--- a/EW/MM_Bullets.cfg
+++ b/EW/MM_Bullets.cfg
@@ -64,14 +64,14 @@
 	@tntMass = 1.13
     @explosive = True
 }
-@BULLET[QF58100mmBullet] {
+@BULLET[OF58100mmBullet]:AFTER[SM_Industries] {
 	@bulletVelocity = 900
 	@bulletMass = 15.6
 	@apBulletMod = 0.5
     @tntMass = 10.3
     @fuzeType = Flak
 }
-+BULLET[OF58100mmBullet]:NEEDS[NAS]:FINAL {
++BULLET[OF58100mmBullet]:NEEDS[SM_Industries]:FINAL {
 	@name = 100MMZS-58
     @fuzeType = Timed
 }
@@ -156,5 +156,6 @@
 @BULLET[100MMHE] {
 	@explosive = True
 }
-
-
+@BULLET[40MMHEFIT] {
+	@fuzeType = None
+}
