--- a/EW/MM_Bullets.cfg
+++ b/EW/MM_Bullets.cfg
@@ -94,9 +94,9 @@
     @tntMass = 13.0
     @fuzeType = Flak
 }
-@BULLET[155mmHE] {
+@BULLET[155mmHE]:AFTER[SM_Industries] {
 	@bulletMass = 60
-	@apBulletMod = 0.15
+	@apBulletMod = 0.17
     @tntMass = 12
 }
 @BULLET[12.7mmBullet] {
