--- a/EW/MM_Bullets.cfg
+++ b/EW/MM_Bullets.cfg
@@ -64,6 +64,10 @@
 	@tntMass = 1.13
     @explosive = True
 }
+@BULLET[100MMAPHE] {
+	@tntMass = 1.13
+    @explosive = True
+}
 @BULLET[OF58100mmBullet]:AFTER[SM_Industries] {
 	@bulletVelocity = 900
 	@bulletMass = 15.6
