Update to new SMA folder organisation.

--- a/EW/MM_JammRadars.cfg
+++ b/EW/MM_JammRadars.cfg
@@ -20,7 +20,7 @@
         } 
     }
 }
-@PART[M163VADS]:NEEDS[SM_AFVs] {
+@PART[M163VADS]:NEEDS[SMA] {
     @MODULE[ModuleRadar] {
 		@directionalFieldOfView = 35
 		@scanRotationSpeed = 40
@@ -35,7 +35,7 @@
         } 
     }
 }
-@PART[ShilkaZSU234turret]:NEEDS[SM_AFVs] {
+@PART[ShilkaZSU234turret]:NEEDS[SMA] {
 	@title = ZSU-23-4 Shilka
 	@description = ZSU-23-4 "Shilka" four 23 mm autocannons, radar guided Anti-aircraft gun, also effective at destroying light ground targets and parts of larger vehicles. It uses 1RL33 (RPK-2 "Tobol") Radar.
     @MODULE[ModuleRadar] {
@@ -191,6 +191,6 @@
 	-MODULE[ModuleRadar] {}
 }
 
-@PART[Humvee]:NEEDS[SM_AFVs] {
+@PART[Humvee]:NEEDS[SMA] {
 	-MODULE[ModuleRadar] {}
 }
