Adding SMA dependency.

--- a/EW/MM_Weapons.cfg
+++ b/EW/MM_Weapons.cfg
@@ -1,11 +1,11 @@
-@PART[CROWS7.62] {
+@PART[CROWS7.62]:NEEDS[SMA] {
 	@title = MG 3
 	@MODULE[ModuleWeapon] {
 		%shortName = MG 3
 		@bulletType = 7.62x54mmBullet
 	}
 }
-@PART[VickersMG] {
+@PART[VickersMG]:NEEDS[SMA] {
 	@title = Vickers MG
 	@description = British 7.7 mm machine gun produced by Vickers Limited, originally for the British Army. Not to be confused with the Maxim machine gun, it was in service from before the First World War until the 1960s, with air-cooled versions of it on many Allied World War I fighter aircraft.
 	@MODULE[ModuleWeapon] {
@@ -13,7 +13,7 @@
 		@bulletType = 7.7x56RmmBullet
 	}
 }
-@PART[89Zjq] {
+@PART[89Zjq]:NEEDS[SMA] {
 	@title = Type 89 HMG
 	@description = Norinco Type 89 heavy machine gun is designed in the People's Republic of China and fires the Soviet 12.7×108mm ammunition.
 	@MODULE[ModuleWeapon] {
@@ -21,7 +21,7 @@
 		@bulletType = 12.7x108mmBullet
 	}
 }
-@PART[KORD] {
+@PART[KORD]:NEEDS[SMA] {
 	@title = Kord HMG
 	@description = The Kord-12.7 mm heavy machine gun is a Russian design that entered service in 1998, replacing the older NSV machine gun.
 	@MODULE[ModuleWeapon] {
@@ -29,7 +29,7 @@
 		@bulletType = 12.7x108mmBullet
 	}
 }
-@PART[CROWS] {
+@PART[CROWS]:NEEDS[SMA] {
 	@title = M151 CROWS
 	@description = The Protector Remote Weapon Station is a remotely controlled weapons station (RWS) that can be mounted to vehicles and stationary platforms. It has been in full scale production since December 2001. It is manufactured by Kongsberg Defence Systems of Norway and Thales Group of France.
 	@MODULE[ModuleWeapon] {
@@ -37,44 +37,58 @@
 		@bulletType = 12.7x99mmBullet
 	}
 }
-@PART[M2HB] {
+@PART[M2HB]:NEEDS[SMA] {
 	@title = M2HB HMG
 	@MODULE[ModuleWeapon] {
 		@bulletType = 12.7x81SRmmBulletAP; 12.7x81SRmmBulletHE
 	}
 }
 
-@PART[HS404] {
+@PART[HS404]:NEEDS[SMA] {
 	@title = Hispano-Suiza HS.404
 	@MODULE[ModuleWeapon] {
 		%shortName = HS.404
 		@bulletType = 20x110mmAPShell; 20x110mmHEShell
 	}
 }
-@PART[MG151] {
+@PART[MG151]:NEEDS[SMA] {
 	@title = MG 151/20
 	@MODULE[ModuleWeapon] {
 		%shortName = MG 151/20
 		@bulletType = 20x82mmAPShell; 20x82mmMGShell
 	}
 }
-@PART[ShVAK-E] {
+@PART[ShVAK-E]:NEEDS[SMA] {
 	@title = ShVAK MG
 	@MODULE[ModuleWeapon] {
 		%shortName = ShVAK MG
 		@bulletType = 20x99mmBZShell; 20x99mmOZShell
 	}
 }
-@PART[CROWS-30MM] {
+@PART[CROWS-30MM]:NEEDS[SMA] {
 	@title = CROWS 30mm HMG
 	@MODULE[ModuleWeapon] {
 		%shortName = CROWS 30mm HMG
 		@bulletType = 30x173Bullet; 30x173HEBullet
 	}
 }
-@PART[BMP75mmTurret] {
+@PART[BMP75mmTurret]:NEEDS[SMA] {
 	@MODULE[ModuleWeapon] {
 		%shortName = BMP 3 75mm
 		@bulletType = 76.2MMMHEATFS
 	}
 }
+
+@PART[ShilkaZSU234turret]:NEEDS[SMA] {
+	@title = ZSU-23-4 Shilka
+	@description = ZSU-23-4 "Shilka" four 23 mm autocannons, radar guided Anti-aircraft gun, also effective at destroying light ground targets and parts of larger vehicles. It uses 1RL33 (RPK-2 "Tobol") Radar.
+}
+@PART[ShilkaZSUHull]:NEEDS[SMA] {
+	@title = ZSU-23-4 Shilka Hull
+	@description = ZSU-23-4 "Shilka" vehicle hull.
+}
+@PART[SMTunguskaAAMT]:NEEDS[SMA] {
+	@title = 2K22 Tunguska
+	@description = KBP 2K22 "Tunguska" (SA-19) "Grison" is a Russian tracked self-propelled anti-aircraft weapon armed with a surface-to-air gun and missile system. It is designed to provide day and night protection for infantry and tank regiments against low-flying aircraft, helicopters, and cruise missiles in all weather conditions.
+}
+
