--- a/EW/MM_Bullets.cfg
+++ b/EW/MM_Bullets.cfg
@@ -1,52 +1,52 @@
-@BULLET[12.7mmBullet] {
+@BULLET[12.7mmBullet]:NEEDS[SMA] {
 	@explosive = False
 	@tntMass = 0
 }
-@BULLET[12.7mmHEBullet] {
+@BULLET[12.7mmHEBullet]:NEEDS[SMA] {
 	@tntMass = 0.0014
 }
-@BULLET[20x102mmHEBullet] {
+@BULLET[20x102mmHEBullet]:NEEDS[SMA] {
 	@tntMass = 0.01
 }
-@BULLET[23x115mmBullet] {
+@BULLET[23x115mmBullet]:NEEDS[SMA] {
 	@tntMass = 0.011
 }
-@BULLET[25x115mmBullet] {
+@BULLET[25x115mmBullet]:NEEDS[SMA] {
 	@tntMass = 0.015
 }
-@BULLET[25x137mmBullet] {
+@BULLET[25x137mmBullet]:NEEDS[SMA] {
 	@tntMass = 0.017
 }
-@BULLET[M792HEI] {
+@BULLET[M792HEI]:NEEDS[SMA] {
 	@tntMass = 0.025
 }
-@BULLET[27×145HEBullet] {
+@BULLET[27×145HEBullet]:NEEDS[SMA] {
 	@apBulletMod = 1
     @tntMass = 0.032
 }
-@BULLET[30MM-Intelligent] {
+@BULLET[30MM-Intelligent]:NEEDS[SMA] {
 	@bulletVelocity = 1100
 	@bulletMass = 0.4
 	@apBulletMod = 1.5
     @tntMass = 0.03
 }
-@BULLET[30x165HE] {
+@BULLET[30x165HE]:NEEDS[SMA] {
 	@bulletMass = 0.4
 	@apBulletMod = 0.42
     @tntMass = 0.031
 }
-@BULLET[30x165K] {
+@BULLET[30x165K]:NEEDS[SMA] {
 	@bulletVelocity = 900
 	@bulletMass = 0.4
 	@apBulletMod = 0.5
 }
-@BULLET[30mmBullet] {
+@BULLET[30mmBullet]:NEEDS[SMA] {
 	@tntMass = 0.026
 }
-@BULLET[30x173HEBullet] {
+@BULLET[30x173HEBullet]:NEEDS[SMA] {
 	@tntMass = 0.042
 }
-@BULLET[35MMHEBullet] {
+@BULLET[35MMHEBullet]:NEEDS[SMA] {
 	@bulletVelocity = 1100
 	@bulletMass = 0.32
 	@apBulletMod = 1
@@ -54,53 +54,53 @@
     @tntMass = 0.06
     @fuzeType = None 
 }
-@BULLET[35x228HEBullet] {
+@BULLET[35x228HEBullet]:NEEDS[SMA] {
 	@tntMass = 0.07
 }
-@BULLET[40MMHEFIT] {
+@BULLET[40MMHEFIT]:NEEDS[SMA] {
 	@fuzeType = None
 }
-@BULLET[40mmLuft42HE] {
+@BULLET[40mmLuft42HE]:NEEDS[SMA] {
 	@tntMass = 0.25
     @fuzeType = None 
 }
-@BULLET[40x53HEBullet] {
+@BULLET[40x53HEBullet]:NEEDS[SMA] {
 	@tntMass = 0.15
 }
-@BULLET[76MMAPHE] {
+@BULLET[76MMAPHE]:NEEDS[SMA] {
 	@bulletVelocity = 980
 	@bulletMass = 5.9
 	@apBulletMod = 1.2
 	@tntMass = 0.42
     @fuzeType = Timed
 }
-@BULLET[76MMRail] {
+@BULLET[76MMRail]:NEEDS[SMA] {
 	@bulletVelocity = 3200
 	@bulletMass = 6.66
 	@apBulletMod = 1.8
 }
-@BULLET[76x636mmBullet] {
+@BULLET[76x636mmBullet]:NEEDS[SMA] {
 	@tntMass = 3
     @fuzeType = Flak
 }
-@BULLET[90MMAPCBC] {
+@BULLET[90MMAPCBC]:NEEDS[SMA] {
 	@explosive = False
 	@tntMass = 0
 }
-@BULLET[100MMHE] {
+@BULLET[100MMHE]:NEEDS[SMA] {
 	@explosive = True
 }
-@BULLET[100mmAPHE] {
+@BULLET[100mmAPHE]:NEEDS[SMA] {
 	@bulletVelocity = 870
 	@apBulletMod = 1.3
 	@tntMass = 1.13
     @explosive = True
 }
-@BULLET[100MMAPHE] {
+@BULLET[100MMAPHE]:NEEDS[SMA] {
 	@tntMass = 1.13
     @explosive = True
 }
-@BULLET[OF58100mmBullet]:AFTER[SM_Industries] {
+@BULLET[OF58100mmBullet]:AFTER[SM_Industries]:NEEDS[SMA] {
 	@bulletVelocity = 900
 	@bulletMass = 15.6
 	@apBulletMod = 0.5
@@ -111,60 +111,60 @@
 	@name = 100MMZS-58
     @fuzeType = Timed
 }
-@BULLET[105MM-94] {
+@BULLET[105MM-94]:NEEDS[SMA] {
 	@bulletVelocity = 1432
 	@bulletMass = 3.18
 	@apBulletMod = 1.46
 }
-@BULLET[3BM28] {
+@BULLET[3BM28]:NEEDS[SMA] {
 	@bulletMass = 4.88
 	@apBulletMod = 1.555
 }
-@BULLET[120mmBulletHE] {
+@BULLET[120mmBulletHE]:NEEDS[SMA] {
 	@apBulletMod = 0.25
     @tntMass = 2.5
 }
-@BULLET[122mmHE] {
+@BULLET[122mmHE]:NEEDS[SMA] {
 	@bulletVelocity = 865
 	@bulletMass = 27
 	@apBulletMod = 0.2
     @tntMass = 9
 }
-@BULLET[122MMAPHE] {
+@BULLET[122MMAPHE]:NEEDS[SMA] {
     @explosive = True
 	@tntMass = 0.5
 }
-@BULLET[122MMAPHEBC] {
+@BULLET[122MMAPHEBC]:NEEDS[SMA] {
     @explosive = True
 	@tntMass = 0.5
 }
-@BULLET[125MM-APFSDS] {
+@BULLET[125MM-APFSDS]:NEEDS[SMA] {
 	@caliber = 30
 	@bulletVelocity = 1620
 	@bulletMass = 4.88
 	@apBulletMod = 1.73
 }
-@BULLET[130mmAPHE] {
+@BULLET[130mmAPHE]:NEEDS[SMA] {
 	@bulletMass = 32
 	@apBulletMod = 0.4
     @fuzeType = Flak
 }
-@BULLET[F44130Bullet] {
+@BULLET[F44130Bullet]:NEEDS[SMA] {
 	@bulletMass = 34
 	@apBulletMod = 0.4
     @tntMass = 13.0
     @fuzeType = Flak
 }
-@BULLET[152ObjAPHEBC] {
+@BULLET[152ObjAPHEBC]:NEEDS[SMA] {
 	@tntMass = 1.0
     @explosive = True
 }
-@BULLET[152MM-APFSDS] {
+@BULLET[152MM-APFSDS]:NEEDS[SMA] {
 	@caliber = 50
 	@bulletMass = 8
 	@apBulletMod = 1.156
 }
-@BULLET[155mmHE]:AFTER[SM_Industries] {
+@BULLET[155mmHE]:AFTER[SM_Industries]:NEEDS[SMA] {
 	@bulletMass = 60
 	@apBulletMod = 0.17
     @tntMass = 12
