--- a/EW/MM_JammRadars.cfg
+++ b/EW/MM_JammRadars.cfg
@@ -1,6 +1,6 @@
 //Radars balance
 
-@PART[Elden40]:NEEDS[FoxDefenseContracts] {
+@PART[Elden40]:NEEDS[FoxDefenseContracts&SMA] {
     @MODULE[ModuleRadar] {
 		@directionalFieldOfView = 10
 		@scanRotationSpeed = 60
@@ -62,58 +62,58 @@
 
 //Radars and jammers removal
 
-@PART[J10C]:NEEDS[NMB] {
+@PART[J10C]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
 }
-@PART[Type-22Cockpit]:NEEDS[NMB] {
+@PART[Type-22Cockpit]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
 }
-@PART[Type-AdvancedFlanker]:NEEDS[NMB] {
+@PART[Type-AdvancedFlanker]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
 }
-@PART[type-20Cockpit]:NEEDS[NMB] {
+@PART[type-20Cockpit]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
 }
-@PART[Type-35-Cockpit]:NEEDS[NMB] {
+@PART[Type-35-Cockpit]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
 }
-@PART[SUPER-SYLPH]:NEEDS[NMB] {
+@PART[SUPER-SYLPH]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
 }
-@PART[Type-57-Cockpit]:NEEDS[NMB] {
+@PART[Type-57-Cockpit]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
 }
-@PART[Vipercockpit]:NEEDS[NMB] {
+@PART[Vipercockpit]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[SuperFlanker]:NEEDS[NMB] {
+@PART[SuperFlanker]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[SU30cockpit]:NEEDS[NMB] {
+@PART[SU30cockpit]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[FA-18C]:NEEDS[NMB] {
+@PART[FA-18C]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[NMB-F14D]:NEEDS[NMB] {
+@PART[NMB-F14D]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleRadar] {}
 }
 
-@PART[3XR]:NEEDS[MNWS_WEAPON] {
+@PART[3XR]:NEEDS[MNWS_WEAPON&SMA] {
 	-MODULE[ModuleECMJammer] {}
 }
 
-@PART[99A2Structural]:NEEDS[KerbalField] {
+@PART[99A2Structural]:NEEDS[KerbalField&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[PSSM]:NEEDS[KerbalField] {
+@PART[PSSM]:NEEDS[KerbalField&SMA] {
 	@title = 3rd-generation Stealth System Module
 	@MODULE[ModuleECMJammer] {		
 		@resourceDrain = 8
@@ -124,70 +124,70 @@
 	}
 }
 
-@PART[Strids74]:NEEDS[FoxDefenseContracts] {
+@PART[Strids74]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[T-10]:NEEDS[FoxDefenseContracts] {
+@PART[T-10]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[T-44]:NEEDS[FoxDefenseContracts] {
+@PART[T-44]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[T-54]:NEEDS[FoxDefenseContracts] {
+@PART[T-54]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[T-64]:NEEDS[FoxDefenseContracts] {
+@PART[T-64]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[T-90]:NEEDS[FoxDefenseContracts] {
+@PART[T-90]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[T26E4]:NEEDS[FoxDefenseContracts] {
+@PART[T26E4]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[AbramsA2]:NEEDS[FoxDefenseContracts] {
+@PART[AbramsA2]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[AMT34]:NEEDS[FoxDefenseContracts] {
+@PART[AMT34]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[Amx50B]:NEEDS[FoxDefenseContracts] {
+@PART[Amx50B]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[AmxELCbis]:NEEDS[FoxDefenseContracts] {
+@PART[AmxELCbis]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[BatChat25]:NEEDS[FoxDefenseContracts] {
+@PART[BatChat25]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[BMP3HE]:NEEDS[FoxDefenseContracts] {
+@PART[BMP3HE]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[FV4005]:NEEDS[FoxDefenseContracts] {
+@PART[FV4005]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[HSTVAP]:NEEDS[FoxDefenseContracts] {
+@PART[HSTVAP]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[IS2]:NEEDS[FoxDefenseContracts] {
+@PART[IS2]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[IS7]:NEEDS[FoxDefenseContracts] {
+@PART[IS7]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[Leopard1]:NEEDS[FoxDefenseContracts] {
+@PART[Leopard1]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[Leopard2A5]:NEEDS[FoxDefenseContracts] {
+@PART[Leopard2A5]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[M103]:NEEDS[FoxDefenseContracts] {
+@PART[M103]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[M3Bradly]:NEEDS[FoxDefenseContracts] {
+@PART[M3Bradly]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[Obj906]:NEEDS[FoxDefenseContracts] {
+@PART[Obj906]:NEEDS[FoxDefenseContracts&SMA] {
 	-MODULE[ModuleRadar] {}
 }
 
