--- a/EW/MM_Weapons.cfg
+++ b/EW/MM_Weapons.cfg
@@ -91,4 +91,51 @@
 	@title = 2K22 Tunguska
 	@description = KBP 2K22 "Tunguska" (SA-19) "Grison" is a Russian tracked self-propelled anti-aircraft weapon armed with a surface-to-air gun and missile system. It is designed to provide day and night protection for infantry and tank regiments against low-flying aircraft, helicopters, and cruise missiles in all weather conditions.
 }
+@PART[SMA57E6BGM]:NEEDS[SMA] {
+	@title = 57E6 Pantsir
+	@description = KBP 57E6 "Pantsir" (SA-22) "Greyhound" is two-stage solid fuel radio/optical command-guided surface-to-air missile in service from 2012 in Russian Federation Armed Forces.
+}
+@PART[AtakaAT]:NEEDS[SMA] {
+	@title = 9M120 Ataka
+	@description = KBM 9M120 "Ataka" (AT-9) "Spiral-2" is a Beam riding SACLOS missile designed to defeat tanks with composite armour and explosive reactive armor.
+}
+@PART[T90MS]:NEEDS[SMA] {
+	@title = T-90AM
+	@description = T-90AM is a Russian Federation main battle tank equipped with 125mm 2A46M-5 smoothbore gun.
+}
+@PART[SMsT80Turret]:NEEDS[SMA] {
+	@title = T-80B
+	@description = T-90B is a Russian Federation main battle tank equipped with 125mm 2A46-2 smoothbore gun.
+}
+@PART[KUB2K12]:NEEDS[SMA] {
+	@title = 2K12 Kub Hull
+	@description = MMZ 2K12 "Kub" (SA-6) "Gainful" mobile surface-to-air missile system is a Soviet low to medium-level air defence system designed to protect ground forces from air attack. Each 2K12 battery consisted of a number of similar tracked vehicles, one of which carries 25 kW G/H band radar. The battery usually also includes four triple-missile transporter erector launchers (TELs), and four trucks, each carrying three spare missiles and a crane.
+}
+@PART[KUB2K12launcher]:NEEDS[SMA] {
+	@title = 2K12 Kub
+	@description = MMZ 2K12 "Kub" (SA-6) "Gainful" mobile surface-to-air missile system is a Soviet low to medium-level air defence system designed to protect ground forces from air attack. Each 2K12 battery consisted of a number of similar tracked vehicles, one of which carries 25 kW G/H band radar. The battery usually also includes four triple-missile transporter erector launchers (TELs), and four trucks, each carrying three spare missiles and a crane.
+}
+@PART[Eland90BHull]:NEEDS[SMA] {
+	@title = Eland 90B
+}
+@PART[Eland90BTurret]:NEEDS[SMA] {
+	@title = Eland 90B Hull
+}
+@PART[BMP75mmTurret]:NEEDS[SMA] {
+	@title = BMP-1
+	@description = BMP-1 is a Soviet amphibious tracked infantry fighting vehicle with 73 mm 2A28 "Grom" low pressure smoothbore semi-automatic gun usually equipped with ATGMs and full of trained soviet soldiers.
+}
+@PART[M1SMA]:NEEDS[SMA] {
+	@title = M1 Abrams
+	@description = BMP-1 is a Soviet amphibious tracked infantry fighting vehicle with 73 mm 2A28 "Grom" low pressure smoothbore semi-automatic gun usually equipped with ATGMs and full of trained soviet soldiers.
+}
+@PART[M1SM1Turret]:NEEDS[SMA] {
+	@title = M1 Abrams
+	@description = BMP-1 is a Soviet amphibious tracked infantry fighting vehicle with 73 mm 2A28 "Grom" low pressure smoothbore semi-automatic gun usually equipped with ATGMs and full of trained soviet soldiers.
+}
+
+
+
+
+
 
