Update to new Patch format.

--- a/EW/Edits.cfg
+++ b/EW/Edits.cfg
@@ -40,6 +40,10 @@
     }
 }
 
+@PART[proceduralTankLiquid] {
+	%MODULE[ModuleSelfSealingTank] {}
+}
+
 //Naval Engines
 
 +PART[LBPMdrive1]:NEEDS[LShipPartsRequired] {
