--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -105,10 +105,15 @@
 	@title = M1 Abrams
 	@description = BMP-1 is a Soviet amphibious tracked infantry fighting vehicle with 73 mm 2A28 "Grom" low pressure smoothbore semi-automatic gun usually equipped with ATGMs and full of trained soviet soldiers.
 }
-@PART[S125NevaMissile]:NEEDS[SMA] {
+@PART[S125Launcher]:NEEDS[SMA] {
 	@title = 5V24/V-600 System 125 TEL
 	@description = A turret capable of holding and firing up to 2 missiles. Warranty void if anything except missiles are mounted. To enable the turret, select the mounted missile from the weapon manager.
 }
+@PART[533Quadtubes]:NEEDS[SMA] {
+	@title = 5V24/V-600 System 125 TEL
+	@description = A turret capable of holding and firing up to 2 missiles. Warranty void if anything except missiles are mounted. To enable the turret, select the mounted missile from the weapon manager.
+}
+
 
 //Complete part overhauls.
 
@@ -153,7 +158,7 @@
 	@subcategory = 0
 	@title = 4K40 Termit
 	@manufacturer = SM Armory Missiles
-	@description = Raduga 4K40/P-15 "Termit" (SS-N-2) "Styx". This anti-shipping missile was deployed by the Russian Navy, 
+	@description = Raduga 4K40/P-15 "Termit" (SS-N-2) "Styx". This anti-shipping missile was deployed by the Russian Navy.
 	
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	@attachRules = 1,1,0,0,1
@@ -168,6 +173,8 @@
 	@maxTemp = 3600
 
 	-MODULE[MissileLauncher] {}
+	-MODULE[BDExplosivePart] {}
+	MODULE {
 	MODULE {
 		name = MissileLauncher
 		shortName = P-15 Termit
@@ -239,9 +246,6 @@
 		engageGround = true
 		engageSLW = false
 	}
-
-	-MODULE[BDExplosivePart] {}
-	MODULE {
 		name = BDExplosivePart
 		tntMass = 454
 	}
