--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -47,6 +47,99 @@
 
 //Title and description fixes.
 
+
+@PART[533Quadtubes]:NEEDS[SMA] {
+	@title = 533mm Quad Torpedo Tube
+}
+@PART[AAV7A1]:NEEDS[SMA] {
+	@title = AAVP-7A1
+	@description = The Assault Amphibious Vehicle is a fully tracked amphibious landing vehicle manufactured by U.S. Combat Systems.
+}
+@PART[AAV7turret20]:NEEDS[SMA] {
+	@title = AAVP-7A1
+	@description = AAVP-7A1 20mm turreted machine gun, yeah i know, your eye is twitching, i know it shouldn't be a 20, but really we all know a .50's a waste of time on anything except kerbs and coke cans.
+}
+@PART[AAVrightArmor]:NEEDS[SMA] {
+	@title = AAVP-7A1 Right Armor
+}
+@PART[AAVleftArmor]:NEEDS[SMA] {
+	@title = AAVP-7A1 Left Armor
+}
+@PART[AAVfwdArmor]:NEEDS[SMA] {
+	@title = AAVP-7A1 Frontal Armor
+}
+@PART[AK100a18]:NEEDS[SMA] {
+	@title = AK-100
+	@description = The AK-100 is a Soviet 100mm naval cannon, with a maximum rate of fire of 60 rounds per minute, firing a 26.8 kg munition in HE anti-air or HE fragmentation varieties. Equipped on patrol ships of project 1135, project 1154, anti-submarine ships of project 1155, nuclear cruiser Admiral Ushakov and Admiral Gorshkov-class frigate.
+}
+@PART[AK130turret]:NEEDS[SMA] {
+	@title = AK-130
+	@description = The AK-130 Russian-built 130mm naval cannon is one of the most powerful gun systems used in the world today, with a maximum rate of fire of 80 rounds per minute, firing a 33 kg munition in HE anti-air or HE fragmentation varieties.
+}
+@PART[AK230]:NEEDS[SMA] {
+	@title = AK-230
+	@description = The AK-230 is a Soviet fully automatic naval twin 30 mm gun. Its primary function is anti-aircraft. It is mounted in an enclosed automatic turret and directed by radar. AK-230 is widely used on big warships as well as small craft. About 1450 guns were produced in the USSR, and about 300 were produced in China as the Type 69. It was succeeded by the more powerful AK-630 from the mid-to-late 1970s.
+}
+@PART[AK639QB1]:NEEDS[SMA] {
+	@title = AK-630
+	@description = The AK-630 is a Soviet and Russian fully automatic naval close-in weapon system based on a six-barreled 30 mm rotary cannon. In "630", "6" means 6 barrels and "30" means 30 mm. The system's primary purpose is defense against anti-ship missiles and other precision guided weapons. However it can also be employed against fixed or rotary wing aircraft, ships and other small craft, coastal targets, and floating mines.
+}
+@PART[AK230LowPlinth]:NEEDS[SMA] {
+	@title = AK-230/630 Low Plinth
+}
+@PART[AK230tallPlinth]:NEEDS[SMA] {
+	@title = AK-230/630 Tall Plinth
+}
+@PART[APC30Cg2A42]:NEEDS[SMA] {
+	@title = 2A42
+	@description = Shipunov 2A42 is a Soviet/Russian 30 mm autocannon used on BMP-2, BMP-3, BMD as well as BTR series of APCs and Attack Helicopters.
+}
+@PART[BMP75mmTurret]:NEEDS[SMA] {
+	@title = BMP-1
+	@description = BMP-1 is a Soviet amphibious tracked infantry fighting vehicle with 73 mm 2A28 "Grom" low pressure smoothbore semi-automatic gun usually equipped with ATGMs and full of trained soviet soldiers.
+	
+	@MODULE[ModuleWeapon] {
+		%shortName = BMP 3 75mm
+		@bulletType = 76.2MMMHEATFS
+	}
+}
+@PART[BradleyActive]:NEEDS[SMA] {
+	@title = M2 Bradley
+	@description = The M2 Bradley is an American infantry fighting vehicle that is a member of the Bradley Fighting Vehicle family. It is manufactured by BAE Systems Land & Armaments, which was formerly United Defense. The Bradley is designed for reconnaissance and to transport a squad of infantry, providing them protection from small arms fire, while also providing firepower to both suppress and eliminate most threats to friendly infantry. This turret uses, as per specification, BDA BGM-71 Tow Missile. Use of other missiles automatically invalidates your warranty. Use of other missiles may also result in R.U.D and possibly a scratch or bruise, maybe two. Please observe the safety instructions on the missile in the latest low observability microfont weight saving ink.
+}
+@PART[BradleyHull]:NEEDS[SMA] {
+	@title = M2 Bradley
+}
+@PART[BradleyRightArmorUpper]:NEEDS[SMA] {
+	@title = M2 Bradley Armor Right
+}
+@PART[BradleyLeftArmorUpper]:NEEDS[SMA] {
+	@title = M2 Bradley Armor Left
+}
+@PART[BradleyRightArmorLower]:NEEDS[SMA] {
+	@title = M2 Bradley Armor Right
+}
+@PART[BradleyLeftArmorLower]:NEEDS[SMA] {
+	@title = M2 Bradley Armor Left
+}
+@PART[Eland90BHull]:NEEDS[SMA] {
+	@title = Eland 90B
+}
+@PART[Eland90BTurret]:NEEDS[SMA] {
+	@title = Eland 90B
+}
+
+
+@PART[FV510Hull]:NEEDS[SMA] {
+	@title = FV 510 Warrior
+	@description = The Warrior tracked vehicle family is a series of British armoured vehicles, originally developed to replace the older FV430 series of armoured vehicles. Warrior was accepted for service with the British Army in November 1984.
+}
+@PART[FV510Turret]:NEEDS[SMA] {
+	@title = FV 510 Warrior
+	@description = The Warrior tracked vehicle family is a series of British armoured vehicles featuring a 30 mm L21A1 RARDEN cannon, originally developed to replace the older FV430 series of armoured vehicles. Warrior was accepted for service with the British Army in November 1984.
+}
+
+
 @PART[ShilkaZSUHull]:NEEDS[SMA] {
 	@title = ZSU-23-4 Shilka Hull
 	@description = ZSU-23-4 "Shilka" vehicle hull.
@@ -82,21 +175,6 @@
 	@title = 2K12 Kub
 	@description = MMZ 2K12 "Kub" (SA-6) "Gainful" mobile surface-to-air missile system is a Soviet low to medium-level air defence system designed to protect ground forces from air attack. Each 2K12 battery consisted of a number of similar tracked vehicles, one of which carries 25 kW G/H band radar. The battery usually also includes four triple-missile transporter erector launchers (TELs), and four trucks, each carrying three spare missiles and a crane.
 }
-@PART[Eland90BHull]:NEEDS[SMA] {
-	@title = Eland 90B
-}
-@PART[Eland90BTurret]:NEEDS[SMA] {
-	@title = Eland 90B Hull
-}
-@PART[BMP75mmTurret]:NEEDS[SMA] {
-	@title = BMP-1
-	@description = BMP-1 is a Soviet amphibious tracked infantry fighting vehicle with 73 mm 2A28 "Grom" low pressure smoothbore semi-automatic gun usually equipped with ATGMs and full of trained soviet soldiers.
-	
-	@MODULE[ModuleWeapon] {
-		%shortName = BMP 3 75mm
-		@bulletType = 76.2MMMHEATFS
-	}
-}
 @PART[M1SMA]:NEEDS[SMA] {
 	@title = M1A1 Abrams
 	@description = BMP-1 is a Soviet amphibious tracked infantry fighting vehicle with 73 mm 2A28 "Grom" low pressure smoothbore semi-automatic gun usually equipped with ATGMs and full of trained soviet soldiers.
@@ -106,10 +184,6 @@
 	@description = BMP-1 is a Soviet amphibious tracked infantry fighting vehicle with 73 mm 2A28 "Grom" low pressure smoothbore semi-automatic gun usually equipped with ATGMs and full of trained soviet soldiers.
 }
 @PART[S125Launcher]:NEEDS[SMA] {
-	@title = 5V24/V-600 System 125 TEL
-	@description = A turret capable of holding and firing up to 2 missiles. Warranty void if anything except missiles are mounted. To enable the turret, select the mounted missile from the weapon manager.
-}
-@PART[533Quadtubes]:NEEDS[SMA] {
 	@title = 5V24/V-600 System 125 TEL
 	@description = A turret capable of holding and firing up to 2 missiles. Warranty void if anything except missiles are mounted. To enable the turret, select the mounted missile from the weapon manager.
 }
